tests/paczka1/small_fuzzy/65410817.err
Error in line 10: RdXIq5OoWn A805 184,1
